# eyeFridge

./: README.md
backend/: .gitignore  Cargo.toml
backend/prisma/: schema.prisma
backend/src/: index.html  main.rs  prisma.rs
eyeFridge/: App.js  app.json  babel.config.js  package-lock.json  package.json  tailwind.config.js
eyeFridge/components/: Card.js  GoBack.js  Headers.js  Navigation.js  Notifications.js  Show.js  Theme.js  Two.js
eyeFridge/components/temp/: CardTwo.js  Help.js  OutOfTermin.js
