[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
tokio = { version = "1.37.0", features = ["full"] }
# eye = "0.5.0"
image = "0.25.1"
yuv = "0.1.5"
nokhwa = { git = "https://github.com/l1npengtul/nokhwa.git",branch = "0.10", features = ["input-native"] }
# uvc = "0.2.0"
# opencv = { version = "*", features = ["clang-runtime","buildtime-bindgen"] }
